<resources>
    <string name="app_name">College Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_field_message">Please fill in all the fields.</string>
    <string name="email_address_error">Please Enter the valid email.</string>
    <string name="user_password_error">Password should contain minimum 6 digits.</string>
    <string name="email_field_require_message">Email address is required.</string>
    <string name="password_field_required_message">Password is required.</string>
    <string name="text_success">Success</string>
    <string name="text_alert">Alert</string>
    <string name="text_error">Error</string>
</resources>
