<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="loginFragment"
            type="com.example.shubhu.collegetime.view.fragments.LoginFragment" />

        <variable
            name="loginViewModel"
            type="com.example.shubhu.collegetime.viewmodel.LoginFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.shubhu.collegetime.view.fragments.LoginFragment">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="100dp"
            android:error="@{loginViewModel.userEmailErrorMessage}"
            app:errorEnabled="@{loginViewModel.isEmailErrorEnabled}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:enabled="@{loginViewModel.progressBarEnabled?false:true}"
                android:text="@={loginViewModel.userEmail}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_user_mail"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:error="@{loginViewModel.userPasswordErrorMessage}"
            app:errorEnabled="@{loginViewModel.isPasswordErrorEnabled}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:enabled="@{loginViewModel.progressBarEnabled?false:true}"
                android:text="@={loginViewModel.userPassword}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_user_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:enabled="@{loginViewModel.progressBarEnabled?false:true}"
            android:onClick="@{()->loginViewModel.clickOnLogin()}"
            android:text="@string/login" />


        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="@{()->loginFragment.openForgotPasswordFragment()}"
            android:text="@string/forgot_password"
            android:enabled="@{loginViewModel.progressBarEnabled?false:true}"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot_password"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/or" />

        <TextView
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_or"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="@{()->loginFragment.openRegisterFragment()}"
            android:text="@string/register"
            android:enabled="@{loginViewModel.progressBarEnabled?false:true}"
           />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{loginViewModel.progressBarEnabled ? View.VISIBLE:View.GONE}"
            />

    </RelativeLayout>
</layout>
