<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable type="com.example.shubhu.collegetime.viewmodel.RegisterViewModel"
            name="registerViewModel"/>
        <variable name="registerFragment"
            type="com.example.shubhu.collegetime.view.fragments.RegisterFrament"/>
    </data>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.shubhu.collegetime.view.fragments.RegisterFrament">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:hint="@string/email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
               android:text="@={registerViewModel.userMail}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_user_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={registerViewModel.userPassword}"
               />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_rgister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_user_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/drawable_background_selector_login_button"
            android:text="@string/register"
            android:onClick="@{()->registerFragment.clickOnRegister()}"/>

    </RelativeLayout>
</ScrollView>
</layout>